# ium-project

./: .gitignore  README.md  pyproject.toml  service_config.json
scripts/: run-service.sh  train-multiple-models.sh  train-param-sweep.sh
src/: analyze_logs.py  delete_model.py  get_models.py  main.py  run_service.py  send_random_requests.py  test_model.py  train_model.py  upload_model.py
src/constants/: __init__.py  constants.py
src/data/: __init__.py  data.py  helpers.py
src/model/: __init__.py  predict.py  preprocessing.py  train.py
src/schemas/: __init__.py  listing_api_schema.py  listing_schema.py
src/service/: schema.py  service.py
src/service/controllers/: __init__.py  admin.py  listings.py
src/service/schemas/: schema.py
src/service/services/: listings.py  logging.py  model.py
